browser/themes/shared/urlbar-searchbar.css
/* ... */
/* Document Picture-in-Picture API window */
@media (display-mode: picture-in-picture) {
  #page-action-buttons {
    display: none;
  }
}

/* When rich suggestions are enabled the urlbar identity icon is given extra padding to
 * align the results and urlbar text */
@media -moz-pref("browser.urlbar.richSuggestions.featureGate") {
  #urlbar[pageproxystate="invalid"]:not([persistsearchterms]) > .identity-box-button {
    padding-inline: calc(6px + var(--urlbar-icon-padding));
  }
}

.urlbar-container {
  padding-block: var(--urlbar-padding-block);
  margin-inline: var(--urlbar-margin-inline);

  :root[uidensity="touch"] & {
    padding-block: 5px;
  }

  &[breakout] {
    min-height: var(--urlbar-container-height);
  }
}

.urlbar {
  display: flex;
  flex-direction: row;
  flex: 1;
  box-sizing: border-box;
  will-change: translate;
  -moz-user-focus: ignore;

  /* Reset UA popover rules */
  width: initial;
  height: initial;
  inset: auto;
  border: none;
  padding: initial;
  overflow: initial;
  color: initial;
  background-color: initial;

  &[breakout] {
    display: block;
    /* This is technically not needed, because popover takes care of it, but
     * helps for clarity. */
    position: absolute;
    height: var(--urlbar-height);
    width: var(--urlbar-width);

    &[breakout-extend] {
      margin-block-start: var(--urlbar-margin-block-start-breakout);
    }
  }
}

.urlbar,
#searchbar {
  /* Setting a min-width to let the location & search bars maintain a constant
   * width in case they haven't been resized manually. (bug 965772) */
  min-width: 1px;
  min-height: var(--urlbar-min-height);
  text-shadow: none;
  color: var(--toolbar-field-text-color);

  /**
   * System colors and widgets are set based on toolbar color. Since toolbar
   * fields can be styled differently from the toolbar, we need to use the
   * correct color scheme in toolbar fields.
   */
  :root[lwt-toolbar-field="light"] & {
    color-scheme: light;
  }
  :root[lwt-toolbar-field="dark"] & {
    color-scheme: dark;
  }
}

.urlbar[focused],
#searchbar:focus-within {
  :root[lwt-toolbar-field-focus="light"] & {
    color-scheme: light;
  }
  :root[lwt-toolbar-field-focus="dark"] & {
    color-scheme: dark;
  }
}

.urlbar-background {
  display: block;
  position: absolute;
  inset: 0;
  background-color: var(--urlbar-background-background-color);
  background-clip: border-box;
  border-radius: var(--urlbar-background-border-radius);
  border: var(--urlbar-background-border);

  .urlbar:is([focused], [open]) > & {
    background-color: var(--urlbar-background-background-color-focused);
  }

  .urlbar[focused]:not([suppress-focus-border]) > & {
    outline: var(--urlbar-background-outline-focused);
    border-color: transparent;
  }

  .urlbar[breakout-extend] > & {
    border: var(--urlbar-background-border-breakout);
    box-shadow: var(--urlbar-background-box-shadow-breakout);
    inset: var(--urlbar-background-inset-breakout);
  }

  :root[uidensity="compact"] .urlbar[breakout-extend] > & {
    inset: var(--urlbar-background-inset-breakout-compact);

    .urlbar:not([open]) > & {
      box-shadow: var(--urlbar-background-box-shadow-breakout-compact);
    }

    .urlbar[open]:not([noresults]) > & {
      border-top-left-radius: var(--urlbar-background-border-top-radius-breakout-compact);
      border-top-right-radius: var(--urlbar-background-border-top-radius-breakout-compact);
    }
  }

  .urlbar[open] > & {
    @media (-moz-platform: macos) and (prefers-contrast) {
      /* The "increase contrast" preference on macOS draws a 1px black line around
         panels, including the separate search bar. Since the Urlbar is not
         implemented as a panel, it does not get this outline. This outline rule
         resembles the system outline, bringing the Urlbar in line with panels and
         other Mac apps. */
      outline: 1px solid var(--focus-outline-color);
    }
  }
}

.urlbar-input-container {
  padding: var(--urlbar-input-container-padding);
  min-width: 0;
  display: flex;
  align-items: center;
  flex: 1;
  box-sizing: border-box;
  border-radius: var(--urlbar-border-radius);
  overflow: clip;

  .urlbar[breakout] > & {
    width: 100%;
    height: 100%;
  }
}

.urlbar:not([open]) > .urlbarView,
.urlbar:not([breakout]) > .urlbarView {
  display: none;
}

#searchbar {
  background-color: var(--urlbar-background-background-color);
  background-clip: border-box;
  border: var(--urlbar-input-container-border);
  border-radius: var(--urlbar-border-radius);
  overflow: clip;

  &:focus-within {
    background-color: var(--urlbar-background-background-color-focused);
  }
}

.urlbar-input,
#urlbar-scheme,
.searchbar-textbox {
  flex: 1;
  background-color: transparent;
  color: inherit;
  border: none;
  border-radius: 0;
  margin: 0;
  padding: 0;
  outline: none;
}
/* ... */

